Mirror sync 784e97c7 (2026-08-28T13:14:52Z)